--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,14 @@ cmake-build-debug/
 third_party/
 libcef_dll_wrapper/
 CMakeFiles/
+CMakeScripts/
 Win32/
 Debug/
+we_media.build/
 src/cefclient/Debug/
 src/cefclient/cefclient.dir/
 src/cefclient/CMakeFiles/
 src/cefsimple/Debug/
 src/cefsimple/CMakeFiles/
 src/cefsimple/cefsimple.dir/
+CMakeCache.txt
