--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -2,3 +2,124 @@
 # Source files.
 #
 
+#
+# Mac OS X configuration.
+#
+
+if(OS_MACOSX)
+    # All sources required by the "cefclient" target. Generates an app bundle that
+    # is used only for the browser process.
+    set(CEFCLIENT_SRCS
+            ${CEFCLIENT_BROWSER_SRCS}
+            ${CEFCLIENT_COMMON_SRCS}
+            ${CEFCLIENT_RESOURCES_SRCS}
+            ${CEFCLIENT_MACOSX_SRCS}
+            )
+
+    # All sources required by the "cefclient Helper" target. Generates an app
+    # bundle that is used only for non-browser processes.
+    set(CEFCLIENT_HELPER_SRCS
+            ${CEFCLIENT_COMMON_SRCS}
+            ${CEFCLIENT_RENDERER_SRCS}
+            ${CEFCLIENT_MACOSX_HELPER_SRCS}
+            )
+
+    # Output paths for the app bundles.
+    set(CEF_APP "${CEF_TARGET_OUT_DIR}/${CEF_TARGET}.app")
+    set(CEF_HELPER_APP "${CEF_TARGET_OUT_DIR}/${CEF_HELPER_OUTPUT_NAME}.app")
+
+    # Variable referenced from Info.plist files.
+    set(PRODUCT_NAME "${CEF_TARGET}")
+
+    # Helper executable target.
+    add_executable(${CEF_HELPER_TARGET} MACOSX_BUNDLE ${CEFCLIENT_HELPER_SRCS})
+    SET_EXECUTABLE_TARGET_PROPERTIES(${CEF_HELPER_TARGET})
+    add_dependencies(${CEF_HELPER_TARGET} libcef_dll_wrapper)
+    target_link_libraries(${CEF_HELPER_TARGET} libcef_lib libcef_dll_wrapper ${CEF_STANDARD_LIBS})
+    set_target_properties(${CEF_HELPER_TARGET} PROPERTIES
+            MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/resources/mac/helper-Info.plist
+            OUTPUT_NAME ${CEF_HELPER_OUTPUT_NAME}
+            )
+
+    # Fix the framework rpath in the helper executable.
+    FIX_MACOSX_HELPER_FRAMEWORK_RPATH(${CEF_HELPER_TARGET})
+
+    # Main executable target.
+    add_executable(${CEF_TARGET} MACOSX_BUNDLE ${CEFCLIENT_RESOURCES_SRCS} ${CEFCLIENT_SRCS})
+    SET_EXECUTABLE_TARGET_PROPERTIES(${CEF_TARGET})
+    add_dependencies(${CEF_TARGET} libcef_dll_wrapper "${CEF_HELPER_TARGET}")
+    target_link_libraries(${CEF_TARGET} libcef_lib libcef_dll_wrapper ${CEF_STANDARD_LIBS} "-framework OpenGL")
+    set_target_properties(${CEF_TARGET} PROPERTIES
+            MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/resources/mac/Info.plist
+            )
+
+    # Copy files into the main app bundle.
+    add_custom_command(
+            TARGET ${CEF_TARGET}
+            POST_BUILD
+            # Copy the helper app bundle into the Frameworks directory.
+            COMMAND ${CMAKE_COMMAND} -E copy_directory
+            "${CEF_HELPER_APP}"
+            "${CEF_APP}/Contents/Frameworks/${CEF_HELPER_OUTPUT_NAME}.app"
+            # Copy the CEF framework into the Frameworks directory.
+            COMMAND ${CMAKE_COMMAND} -E copy_directory
+            "${CEF_BINARY_DIR}/Chromium Embedded Framework.framework"
+            "${CEF_APP}/Contents/Frameworks/Chromium Embedded Framework.framework"
+            VERBATIM
+    )
+
+    # Fix the framework rpath in the main executable.
+    FIX_MACOSX_MAIN_FRAMEWORK_RPATH(${CEF_TARGET})
+
+    # Manually process and copy over resource files.
+    # The Xcode generator can support this via the set_target_properties RESOURCE
+    # directive but that doesn't properly handle nested resource directories.
+    # Remove these prefixes from input file paths.
+    set(PREFIXES
+            "resources/mac/"
+            "resources/"
+            "../shared/resources/"
+            )
+    COPY_MACOSX_RESOURCES("${CEFCLIENT_RESOURCES_SRCS}" "${PREFIXES}" "${CEF_TARGET}" "${CMAKE_CURRENT_SOURCE_DIR}" "${CEF_APP}")
+endif()
+
+
+#
+# Windows configuration.
+#
+
+if(OS_WINDOWS)
+    # All sources required by the "cefclient" target. Generates an executable that
+    # is used for all processes.
+    set(CEFCLIENT_SRCS
+            ${CEFCLIENT_BROWSER_SRCS}
+            ${CEFCLIENT_COMMON_SRCS}
+            ${CEFCLIENT_RENDERER_SRCS}
+            ${CEFCLIENT_RESOURCES_SRCS}
+            ${CEFCLIENT_WINDOWS_SRCS}
+            )
+
+    # Executable target.
+    add_executable(${CEF_TARGET} WIN32 ${CEFCLIENT_SRCS})
+    SET_EXECUTABLE_TARGET_PROPERTIES(${CEF_TARGET})
+    add_dependencies(${CEF_TARGET} libcef_dll_wrapper)
+    target_link_libraries(${CEF_TARGET} libcef_lib libcef_dll_wrapper ${CEF_STANDARD_LIBS} glu32.lib imm32.lib opengl32.lib)
+
+    if(USE_ATL)
+        # Required by VS2013 to link accessibility API functions.
+        target_link_libraries(${CEF_TARGET} oleacc.lib)
+    endif()
+
+    if(USE_SANDBOX)
+        # Logical target used to link the cef_sandbox library.
+        ADD_LOGICAL_TARGET("cef_sandbox_lib" "${CEF_SANDBOX_LIB_DEBUG}" "${CEF_SANDBOX_LIB_RELEASE}")
+        target_link_libraries(${CEF_TARGET} cef_sandbox_lib ${CEF_SANDBOX_STANDARD_LIBS})
+    endif()
+
+    # Add the custom manifest files to the executable.
+    ADD_WINDOWS_MANIFEST("${CMAKE_CURRENT_SOURCE_DIR}/resources/win" "${CEF_TARGET}" "exe")
+
+    # Copy CEF binary and resource files to the target output directory.
+    COPY_FILES("${CEF_TARGET}" "${CEF_BINARY_FILES}" "${CEF_BINARY_DIR}" "${CEF_TARGET_OUT_DIR}")
+    COPY_FILES("${CEF_TARGET}" "${CEF_RESOURCE_FILES}" "${CEF_RESOURCE_DIR}" "${CEF_TARGET_OUT_DIR}")
+endif()
